feat: reach 90%+ test coverage and resolve sonar maintainability issues